src/test/resources/semantic/custom/accept/functionReturn.ul
void main() {
    return foo();
}

void foo() {
    int value;
    boolean result;

    value = bar();
    result = bar() == buzz();

    return foo();
}

int bar() {
}

int buzz() {
}
