src/test/resources/semantic/custom/reject/multiplyString.ul
void main() {
}

void foo() {
    boolean result;
    result = "string1" * "string2";
}
